# egg_api

./: .gitignore  Cargo.toml  Procfile  README.md  callgrind.out
src/: main.rs  models.rs  pokemons.json  randgen.rs
