[package]
name = "egg_api_rust"
version = "0.1.0"
authors = ["davalbagr <davalbagr2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
rand = "*"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
